src/FIRe/Parser/CFGParser.java
// Generated from C:/Users/Magnus/Desktop/FIReCompiler2/src/FIRe/Parser\CFG.g4 by ANTLR 4.7
package FIRe.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CFGParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Type=1, RobotProperties=2, When=3, SingleLineComment=4, MultiLineComment=5, 
		WhiteSpace=6, Val=7, AdditiveOp=8, MultiOp=9, Plus=10, Minus=11, Times=12, 
		Divide=13, Modulo=14, BoolVal=15, RelativeOp=16, BoolOp=17, TRUE=18, FALSE=19, 
		Hat=20, Scopel=21, Scoper=22, Comma=23, Colon=24, SemiColon=25, Dot=26, 
		Squarel=27, Squarer=28, Parenl=29, Parenr=30, For=31, Upto=32, Downto=33, 
		While=34, If=35, Elseif=36, Else=37, Strategy=38, Routine=39, Void=40, 
		Assign=41, Return=42, Not=43, Event=44, Name=45, EndOfFile=46;
	public static final int
		RULE_prog = 0, RULE_progBody = 1, RULE_strategyDcl = 2, RULE_strategyBlock = 3, 
		RULE_funcDcl = 4, RULE_funcType = 5, RULE_block = 6, RULE_blockBody = 7, 
		RULE_fParamList = 8, RULE_robotDcl = 9, RULE_robotDclBody = 10, RULE_dcl = 11, 
		RULE_stmt = 12, RULE_routine = 13, RULE_when = 14, RULE_expr = 15, RULE_assignStmt = 16, 
		RULE_funcCall = 17, RULE_eventDcl = 18, RULE_aParamList = 19, RULE_ctrlStruct = 20, 
		RULE_aif = 21, RULE_aelseif = 22, RULE_aelse = 23, RULE_id = 24;
	public static final String[] ruleNames = {
		"prog", "progBody", "strategyDcl", "strategyBlock", "funcDcl", "funcType", 
		"block", "blockBody", "fParamList", "robotDcl", "robotDclBody", "dcl", 
		"stmt", "routine", "when", "expr", "assignStmt", "funcCall", "eventDcl", 
		"aParamList", "ctrlStruct", "aif", "aelseif", "aelse", "id"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'RobotProperties'", "'when'", null, null, null, null, null, 
		null, "'+'", "'-'", "'*'", "'/'", "'%'", null, null, null, "'true'", "'false'", 
		"'^'", "'{'", "'}'", "','", "':'", "';'", "'.'", "'['", "']'", "'('", 
		"')'", "'for'", "'upto'", "'downto'", "'while'", "'if'", "'else if'", 
		"'else'", "'strategy'", "'routine'", "'void'", "'='", "'return'", "'!'", 
		"'event'", null, "'$'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "Type", "RobotProperties", "When", "SingleLineComment", "MultiLineComment", 
		"WhiteSpace", "Val", "AdditiveOp", "MultiOp", "Plus", "Minus", "Times", 
		"Divide", "Modulo", "BoolVal", "RelativeOp", "BoolOp", "TRUE", "FALSE", 
		"Hat", "Scopel", "Scoper", "Comma", "Colon", "SemiColon", "Dot", "Squarel", 
		"Squarer", "Parenl", "Parenr", "For", "Upto", "Downto", "While", "If", 
		"Elseif", "Else", "Strategy", "Routine", "Void", "Assign", "Return", "Not", 
		"Event", "Name", "EndOfFile"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CFG.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CFGParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public RobotDclContext robotDcl() {
			return getRuleContext(RobotDclContext.class,0);
		}
		public TerminalNode EndOfFile() { return getToken(CFGParser.EndOfFile, 0); }
		public List<ProgBodyContext> progBody() {
			return getRuleContexts(ProgBodyContext.class);
		}
		public ProgBodyContext progBody(int i) {
			return getRuleContext(ProgBodyContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			robotDcl();
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Type) | (1L << Strategy) | (1L << Void) | (1L << Event))) != 0)) {
				{
				{
				setState(51);
				progBody();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(EndOfFile);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgBodyContext extends ParserRuleContext {
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(CFGParser.SemiColon, 0); }
		public FuncDclContext funcDcl() {
			return getRuleContext(FuncDclContext.class,0);
		}
		public StrategyDclContext strategyDcl() {
			return getRuleContext(StrategyDclContext.class,0);
		}
		public EventDclContext eventDcl() {
			return getRuleContext(EventDclContext.class,0);
		}
		public ProgBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_progBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterProgBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitProgBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitProgBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgBodyContext progBody() throws RecognitionException {
		ProgBodyContext _localctx = new ProgBodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_progBody);
		try {
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				dcl();
				setState(60);
				match(SemiColon);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				funcDcl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				strategyDcl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				eventDcl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrategyDclContext extends ParserRuleContext {
		public TerminalNode Strategy() { return getToken(CFGParser.Strategy, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode Parenl() { return getToken(CFGParser.Parenl, 0); }
		public TerminalNode Parenr() { return getToken(CFGParser.Parenr, 0); }
		public TerminalNode Scopel() { return getToken(CFGParser.Scopel, 0); }
		public TerminalNode Scoper() { return getToken(CFGParser.Scoper, 0); }
		public FParamListContext fParamList() {
			return getRuleContext(FParamListContext.class,0);
		}
		public List<DclContext> dcl() {
			return getRuleContexts(DclContext.class);
		}
		public DclContext dcl(int i) {
			return getRuleContext(DclContext.class,i);
		}
		public List<TerminalNode> SemiColon() { return getTokens(CFGParser.SemiColon); }
		public TerminalNode SemiColon(int i) {
			return getToken(CFGParser.SemiColon, i);
		}
		public List<StrategyBlockContext> strategyBlock() {
			return getRuleContexts(StrategyBlockContext.class);
		}
		public StrategyBlockContext strategyBlock(int i) {
			return getRuleContext(StrategyBlockContext.class,i);
		}
		public StrategyDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strategyDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterStrategyDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitStrategyDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitStrategyDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StrategyDclContext strategyDcl() throws RecognitionException {
		StrategyDclContext _localctx = new StrategyDclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_strategyDcl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(Strategy);
			setState(68);
			id();
			setState(69);
			match(Parenl);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Type) {
				{
				setState(70);
				fParamList();
				}
			}

			setState(73);
			match(Parenr);
			setState(74);
			match(Scopel);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Type) {
				{
				{
				setState(75);
				dcl();
				setState(76);
				match(SemiColon);
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==When || _la==Routine) {
				{
				{
				setState(83);
				strategyBlock();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(Scoper);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrategyBlockContext extends ParserRuleContext {
		public RoutineContext routine() {
			return getRuleContext(RoutineContext.class,0);
		}
		public WhenContext when() {
			return getRuleContext(WhenContext.class,0);
		}
		public StrategyBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strategyBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterStrategyBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitStrategyBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitStrategyBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StrategyBlockContext strategyBlock() throws RecognitionException {
		StrategyBlockContext _localctx = new StrategyBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_strategyBlock);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Routine:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				routine();
				}
				break;
			case When:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				when();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDclContext extends ParserRuleContext {
		public FuncTypeContext funcType() {
			return getRuleContext(FuncTypeContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode Parenl() { return getToken(CFGParser.Parenl, 0); }
		public TerminalNode Parenr() { return getToken(CFGParser.Parenr, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FParamListContext fParamList() {
			return getRuleContext(FParamListContext.class,0);
		}
		public FuncDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterFuncDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitFuncDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitFuncDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDclContext funcDcl() throws RecognitionException {
		FuncDclContext _localctx = new FuncDclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcDcl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			funcType();
			setState(96);
			id();
			setState(97);
			match(Parenl);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Type) {
				{
				setState(98);
				fParamList();
				}
			}

			setState(101);
			match(Parenr);
			setState(102);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncTypeContext extends ParserRuleContext {
		public TerminalNode Void() { return getToken(CFGParser.Void, 0); }
		public TerminalNode Type() { return getToken(CFGParser.Type, 0); }
		public FuncTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterFuncType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitFuncType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitFuncType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncTypeContext funcType() throws RecognitionException {
		FuncTypeContext _localctx = new FuncTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if ( !(_la==Type || _la==Void) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode Scopel() { return getToken(CFGParser.Scopel, 0); }
		public TerminalNode Scoper() { return getToken(CFGParser.Scoper, 0); }
		public List<BlockBodyContext> blockBody() {
			return getRuleContexts(BlockBodyContext.class);
		}
		public BlockBodyContext blockBody(int i) {
			return getRuleContext(BlockBodyContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(Scopel);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Type) | (1L << For) | (1L << While) | (1L << If) | (1L << Return) | (1L << Name))) != 0)) {
				{
				{
				setState(107);
				blockBody();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(Scoper);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockBodyContext extends ParserRuleContext {
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(CFGParser.SemiColon, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public BlockBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterBlockBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitBlockBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitBlockBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockBodyContext blockBody() throws RecognitionException {
		BlockBodyContext _localctx = new BlockBodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_blockBody);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Type:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				dcl();
				setState(116);
				match(SemiColon);
				}
				break;
			case For:
			case While:
			case If:
			case Return:
			case Name:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FParamListContext extends ParserRuleContext {
		public TerminalNode Type() { return getToken(CFGParser.Type, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode Comma() { return getToken(CFGParser.Comma, 0); }
		public FParamListContext fParamList() {
			return getRuleContext(FParamListContext.class,0);
		}
		public FParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fParamList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterFParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitFParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitFParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FParamListContext fParamList() throws RecognitionException {
		FParamListContext _localctx = new FParamListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fParamList);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(Type);
				setState(122);
				id();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(Type);
				setState(124);
				id();
				setState(125);
				match(Comma);
				setState(126);
				fParamList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RobotDclContext extends ParserRuleContext {
		public TerminalNode RobotProperties() { return getToken(CFGParser.RobotProperties, 0); }
		public TerminalNode Scopel() { return getToken(CFGParser.Scopel, 0); }
		public RobotDclBodyContext robotDclBody() {
			return getRuleContext(RobotDclBodyContext.class,0);
		}
		public TerminalNode Scoper() { return getToken(CFGParser.Scoper, 0); }
		public RobotDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_robotDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterRobotDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitRobotDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitRobotDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RobotDclContext robotDcl() throws RecognitionException {
		RobotDclContext _localctx = new RobotDclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_robotDcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(RobotProperties);
			setState(131);
			match(Scopel);
			setState(132);
			robotDclBody();
			setState(133);
			match(Scoper);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RobotDclBodyContext extends ParserRuleContext {
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<TerminalNode> Colon() { return getTokens(CFGParser.Colon); }
		public TerminalNode Colon(int i) {
			return getToken(CFGParser.Colon, i);
		}
		public List<TerminalNode> SemiColon() { return getTokens(CFGParser.SemiColon); }
		public TerminalNode SemiColon(int i) {
			return getToken(CFGParser.SemiColon, i);
		}
		public RobotDclBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_robotDclBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterRobotDclBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitRobotDclBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitRobotDclBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RobotDclBodyContext robotDclBody() throws RecognitionException {
		RobotDclBodyContext _localctx = new RobotDclBodyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_robotDclBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Name) {
				{
				{
				setState(135);
				id();
				setState(136);
				match(Colon);
				setState(137);
				id();
				setState(138);
				match(SemiColon);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public TerminalNode Type() { return getToken(CFGParser.Type, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode Assign() { return getToken(CFGParser.Assign, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> Comma() { return getTokens(CFGParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(CFGParser.Comma, i);
		}
		public TerminalNode Squarel() { return getToken(CFGParser.Squarel, 0); }
		public TerminalNode Squarer() { return getToken(CFGParser.Squarer, 0); }
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CFGListener ) ((CFGListener)listener).exitDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CFGVisitor ) return ((CFGVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}
